--- a/views/macros.njk
+++ b/views/macros.njk
@@ -92,10 +92,10 @@ which allows this macro to be reused to create dropdown or radiobutton filters
 <div>
       <p class="has-text-weight-semibold">Dependency Track Key:</p>
       <div class="is-flex {{containerStyle}} is-justify-content-space-around">
-         <span class="{{elementStyle}} tag has-background-danger-30 has-text-white">Critical</span>
-         <span class="{{elementStyle}} tag is-danger">High</span>
-         <span class="{{elementStyle}} tag is-warning">Medium</span>
-         <span class="{{elementStyle}} tag is-success">Low</span>
+         <span class="{{elementStyle}} tag is-critical-vuln has-text-white">Critical</span>
+         <span class="{{elementStyle}} tag is-high-vuln">High</span>
+         <span class="{{elementStyle}} tag is-medium-vuln">Medium</span>
+         <span class="{{elementStyle}} tag is-low-vuln">Low</span>
          <span class="{{elementStyle}} tag">Components</span>
       </div>
 </div>
